--- a/Scan-HTML/src/index.css
+++ b/Scan-HTML/src/index.css
@@ -1,44 +1,34 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  background-color: #1c1c1c;
+  padding: 2rem;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-a:hover {
-  color: #535bf2;
+
+html {
+  font-size: 62.5%; /* 1rem = 10px */
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em;
+  margin-left: .5rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #2c2c2c;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -50,15 +40,24 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+details {
+  margin: 10px 0;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
+}
+
+summary {
+  cursor: pointer;
+  padding: 8px;
+  background-color: #343434;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.json-code {
+  background-color: #282c34;
+  color: #abb2bf;
+  padding: 10px;
+  border-radius: 0 0 5px 5px;
+  white-space: pre-wrap;
 }
